--- a/hi9.html
+++ b/hi9.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="hi9.js"></script>
   </head>
 </html>
