--- a/hi9.html
+++ b/hi9.html
@@ -1,6 +1,29 @@
 <html>
   <head>
-    <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="hi9.js"></script>
+    <script>
+      var myFirebaseRef = new Firebase("https://hi9site.firebaseio.com/testing");
+      var authData = myFirebaseRef.getAuth();
+      function authHandler(error, authData) {
+        if (error) {
+          console.log("Login Failed!", error);
+        } else {
+          console.log("Authenticated successfully with payload:", authData);
+        }
+      }
+      if (authData) {
+        console.log("User " + authData.uid + " is logged in with " +  authData.provider);
+        var data = {}
+        data[authData.uid] = authData.google.email;
+        myFirebaseRef.set(data);
+      } else {
+        console.log("User is logged out");
+       
+        myFirebaseRef.authWithOAuthPopup("google", authHandler, {
+          remember: "sessionOnly",
+          scope: "email"
+        });
+      }
+    </script>
   </head>
 </html>
