--- a/redirect.html
+++ b/redirect.html
@@ -1,3 +1,3 @@
 <head>
-    <meta http-equiv="refresh" content="0;URL=http://open-elements.org">
+    <meta http-equiv="refresh" content="0;URL=https://hi9.uk">
 </head>
