--- a/hi9.html
+++ b/hi9.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
     <script src="hi9.js"></script>
   </head>
 </html>
