--- a/redirect.html
+++ b/redirect.html
@@ -1,3 +1,1 @@
-<head>
-    <meta http-equiv="refresh" content="0;URL=https://hi9.uk">
-</head>
+<meta http-equiv="refresh" content="0;URL=http://localhost:5000">
