--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,7 @@
 <script>
+// Copyright (c) 2014 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
 
 /**
  * Get the current URL.
@@ -44,8 +47,6 @@ function getCurrentTabUrl(callback) {
   // });
   // alert(url); // Shows "undefined", because chrome.tabs.query is async.
 }
-
-
 
 /**
  * @param {string} searchTerm - Search term for Google Image search.
@@ -116,4 +117,5 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   });
 });
+
 </script>
