--- a/popup.html
+++ b/popup.html
@@ -26,8 +26,10 @@
   <body>
     <div id="status"></div>
     <img id="image-result" hidden>
+    <h2 id="title"></h2>
     <canvas id="canvas" width="250"></canvas>
-    
+    <input id="imageAsUrl"></input>
+    <p id="desc"></p>
   </body>
 </html>
 
