--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,8 @@
     <canvas id="canvas" width="250"></canvas>
     <h2 id="title"></h2>
     <button id="myBtn">Add it</button>
+    <input id="imageUrl" />
+    
   </body>
 </html>
 
