--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,9 @@
 
   </head>
   <body>
-    <canvas id="canvas" width="250"></canvas>
+    <canvas id="fav" width="32" height="32"></canvas>
     <h2 id="title"></h2>
+    <canvas id="canvas" width="250"></canvas>
     <button id="myBtn">Add it</button>
     <input id="imageUrl" />
     
