--- a/popup.html
+++ b/popup.html
@@ -14,9 +14,7 @@
     <canvas id="fav" width="32" height="32"></canvas>
     <h2 id="title"></h2>
     <canvas id="canvas" width="250"></canvas>
-    <button id="myBtn">Add it</button>
-    <input id="imageUrl" />
-    
+    <button id="myBtn">add card</button>
   </body>
 </html>
 
