--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,8 @@
   </head>
   <body>
     <canvas id="fav" width="32" height="32"></canvas>
-    <h2 id="title"></h2>
+    <span id="title"></span>
     <canvas id="canvas" width="250"></canvas>
-    <button id="myBtn">add card</button>
   </body>
 </html>
 
