--- a/redirect.html
+++ b/redirect.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL=https://auth-c5e05.firebaseapp.com/newtab">
+<meta http-equiv="refresh" content="0;URL=https://auth-c5e05.firebaseapp.com/newtab.html">
