changed to deko

--- a/deko.html
+++ b/deko.html
@@ -5,6 +5,6 @@
     <title>Hi9</title>
   </head>
   <body>
-    <script src="hi9.js"></script>
+    <script src="deko.js"></script>
   </body>
 </html>
