--- a/deko.html
+++ b/deko.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hi9</title>
+    <title>deko</title>
   </head>
   <body>
     <script src="deko.js"></script>
